--- a/src/_includes/base.html
+++ b/src/_includes/base.html
@@ -6,6 +6,7 @@
   <title>{{ title }}</title>
   <link rel="stylesheet" href="/css/reset.css">
   <link rel="stylesheet" href="/css/style.css">
+  <link href="https://fonts.googleapis.com/css2?family=Lobster&family=Open+Sans:wght@400;600&display=swap" rel="stylesheet">
 </head>
 <body>
   <header>
