--- a/src/css/style.css
+++ b/src/css/style.css
@@ -1,21 +1,76 @@
 :root {
-  --base-size: 1rem;
   --auto-grid-min-size: 16rem;
-}
+  --base-size: 1.1rem;
+  /* Major third type scale */
+  --size-300: calc(var(--base-size) * 0.8);
+  --size-400: var(--base-size);
+  --size-500: calc(var(--base-size) * 1.25);
+  --size-600: calc(var(--base-size) * 1.563);
+  --size-700: calc(var(--base-size) * 1.953);
+  --size-800: calc(var(--base-size) * 2.441);
+  --size-900: calc(var(--base-size) * 3.052);
 
+  --color-dark: #114b5f;
+  --color-med-dark: #1a936f;
+  --color-med: #88d498;
+  --color-med-light: #c6dabf;
+  --color-light: #f3e9d2;
+  --white: #fff;
+}
+/*  this is a guide for placement */
 * {
   border: 1px solid red;
+}
+
+/* MAIN PAGE STYLES */
+body {
+  background-color: var(--color-dark);
+  color: var(--color-med-light);
+  font-family: 'Open Sans', sans-serif;
+  min-height: 100vh;
+  display: flex;
+  flex-direction: column;
 }
 
 main {
   max-width: 85rem;
   margin-left: auto;
   margin-right: auto;
-  padding: 0 1rem;
+  padding: 0 var(--size-400, 1rem);
+}
+
+footer {
+  margin-top: auto;
 }
 
 .auto-grid {
   display: grid;
-  grid-template-columns: repeat(auto-fill, minmax(var(--auto-grid-min-size, 16rem), 1fr));
-  grid-gap: 1rem;
+  grid-template-columns: repeat(auto-fit, minmax(var(--auto-grid-min-size, 16rem), 1fr));
+  grid-gap: var(--size-400);
+}
+
+.card {
+  padding: var(--size-400);
+  text-align: center;
+  background-color: var(--color-light);
+  color: var(--color-dark);
+  border-radius: var(--size-300);
+  border: 1px solid var(--color-med);
+  
+}
+
+
+/* TEXT */
+h1 {
+  font-family: 'Lobster';
+  font-size: var(--size-900);
+}
+h2 {
+  font-size: var(--size-800);
+}
+h3 {
+  font-size: var(--size-700);
+}
+p {
+  font-size: var(--size-400);
 }
