failed attempt to convert collection to json

--- a/src/make-my-listings.json.njk
+++ b/src/make-my-listings.json.njk
@@ -2,4 +2,5 @@
 permalink: "/static/js/listings.json"
 ---
 
-{{ collections.listings | dump | safe }}
+{{ collections.listings | log }}
+{# {{ collections.listings | dump | safe }} #}
