--- a/src/_includes/base.njk
+++ b/src/_includes/base.njk
@@ -7,12 +7,11 @@
   <link rel="stylesheet" href="/static/css/reset.css">
   <link rel="stylesheet" href="/static/css/style.css">
   <link href="https://fonts.googleapis.com/css2?family=Lobster&family=Open+Sans:wght@400;600&display=swap" rel="stylesheet">
-  <link rel="stylesheet" href="https://unpkg.com/leaflet@1.6.0/dist/leaflet.css"
-   integrity="sha512-xwE/Az9zrjBIphAcBb3F6JVqxf46+CDLwfLMHloNu6KEQCAWi6HcDUbeOfBIptF7tcCzusKFjFw2yuvEpDL9wQ=="
-   crossorigin=""/>
-  <script src="https://unpkg.com/leaflet@1.6.0/dist/leaflet.js"
-   integrity="sha512-gZwIG9x3wUXg2hdXF6+rVkLF/0Vi9U8D2Ntg4Ga5I5BZpVkVxlJWbSQtXPSiUTtC0TjtGOmxa1AJPuV0CPthew=="
-   crossorigin=""></script>
+  {# Add facility for pages to declare an array of critical styles #}
+  {% if pageStyles %}
+    {% include pageStyles %}
+  {% endif %}
+  {% include 'svg-icons.html' %}
 </head>
 <body>
   <header>
@@ -20,10 +19,14 @@
     This is the header
   </header>
   <main>
-    <div id="mapBox"></div>
+      {% block stuff %}
+      no block stuff :(
+      {% endblock %}
   </main>
   <footer>This is the footer</footer>
-  <script type="text/javascript" src="/static/js/listings.js"></script>
-  <script src="/static/js/map.js"></script>
+  {# Page specific scripts #}
+  {% if pageScripts %}
+    {% include pageScripts %}
+  {% endif %}
 </body>
 </html>
