created layouts and partials folders in _includes

--- a/src/_includes/layouts/base.njk
+++ b/src/_includes/layouts/base.njk
@@ -11,7 +11,7 @@
   {% if pageStyles %}
     {% include pageStyles %}
   {% endif %}
-  {% include 'svg-icons.html' %}
+  {% include 'partials/svg-icons.html' %}
 </head>
 <body>
   <header>
