--- a/src/_includes/layouts/business-card.njk
+++ b/src/_includes/layouts/business-card.njk
@@ -1,4 +1,4 @@
-<div class="auto-grid">
+<div class="auto-grid wrapper">
   {% for listing in collections.listings %}
       <article class="card">
         <svg class="business-icon">
