--- a/src/_includes/layouts/home.njk
+++ b/src/_includes/layouts/home.njk
@@ -1,5 +1,6 @@
 {% extends 'layouts/base.njk' %}
 
 {% block stuff %}
+{{content | safe}}
   {% include 'layouts/business-card.njk' %}
 {% endblock%}
