--- a/src/static/css/style.css
+++ b/src/static/css/style.css
@@ -1,6 +1,7 @@
 :root {
 	--auto-grid-min-size: 300px;
-	--size-base: 18px;
+	--size-base: 17px;
+	--page-max-width: 1500px;
 	/* Major third type scale */
 	--size-sm: calc(var(--size-base) * 0.8);
 	--size-md: calc(var(--size-base) * 1.25);
@@ -19,43 +20,76 @@
 
 /*  this is a guide for placement */
 * {
-	border: 1px solid red;
+	/* border: 1px solid red; */
 }
 
 /* MAIN PAGE STYLES */
 body {
 	background-color: var(--color-dark);
 	color: var(--color-med-light);
+	text-align: center;
 	display: flex;
 	flex-direction: column;
 	align-items: stretch;
 	justify-content: center;
+	padding: 0 var(--size-base, 1rem);
+}
+
+header > * {
+	margin-top: var(--size-base, 1rem);
 }
 
 main {
-	padding: var(--size-base, 1rem);
+	padding: var(--size-base, 1rem) 0;
 }
 
 footer {
 	margin-top: auto;
 }
-
+.wrapper {
+	max-width: var(--page-max-width);
+	margin-left: auto;
+  margin-right: auto;
+}
 .auto-grid {
 	display: grid;
-	max-width: 1360px;
-	margin-left: auto;
-	margin-right: auto;
 	grid-template-columns: repeat(auto-fit, minmax(var(--auto-grid-min-size, 16rem), 1fr));
 	grid-gap: var(--size-base, 1rem);
 }
 
+.flex {
+	display: flex;
+	flex-wrap: wrap;
+	justify-content: space-around;
+	align-items: center;
+}
+
+.inline {
+	display: inline-block;
+}
+
+/* Listings */
 .card {
 	padding: var(--size-base, 1rem);
-	text-align: center;
+	text-align: left;
 	background-color: var(--color-light);
 	color: var(--color-dark);
 	border-radius: var(--size-sm);
-	border: 1px solid var(--color-med);
+	display: flex;
+	flex-wrap: wrap;
+	align-content: flex-start;
+	justify-content: center;
+}
+
+.business-icon {
+	fill: var(--color-med-dark);
+	width: 5rem;
+	height: 5rem;
+	align-self: center;
+}
+
+.business-info {
+	border-block-start: 1px solid var(--color-med);
 }
 
 /* TEXT */
@@ -75,9 +109,26 @@ h3 {
 }
 p {
 	font-size: var(--size-base);
+	max-width: 65ch;
+}
+nav a {
+	font-family: 'Lobster';
+	font-size: var(--size-h2);
+	padding: 0 var(--size-base, 1rem);
+	text-decoration: none;
+}
+.active {
+	text-decoration: underline;
 }
 
 /* MAP */
 #mapBox {
 	height: 900px;
+	border-radius: var(--size-sm);
+}
+
+@media (min-width: 600px) {
+	:root{
+		--auto-grid-min-size: 500px;
+	}
 }
