Added contact and soical icons

--- a/src/_includes/partials/svg-icons.html
+++ b/src/_includes/partials/svg-icons.html
@@ -1,3 +1,4 @@
+<!-- Icons by https://tablericons.com/ -->
 <svg style="position: absolute; width: 0; height: 0;" height="0"  width="0" xmlns="http://www.w3.org/2000/svg">
   <defs>
     <symbol id="placeholder" viewBox="0 0 512 512">
@@ -14,9 +15,42 @@
       C356.258,151.195,311.282,106.219,256.006,106.219z M256.006,270.918c-35.536,0-64.448-28.912-64.448-64.448
       c0-35.536,28.912-64.448,64.448-64.448c35.536,0,64.448,28.912,64.448,64.448S291.542,270.918,256.006,270.918z"/>
     </symbol>
-    <symbol id="envelope" viewBox="0 0 511.937 511.937">
-      <title>envelope</title>
-      <path d="m504.362 323.321c4.142 0 7.5-3.358 7.5-7.5v-211.145c.646-4.485-2.98-8.567-7.417-8.567h-391.477c-9.674 0-9.674 15 0 15h369.92l-192.74 152.597c-20.125 15.933-48.234 15.933-68.359 0l-192.741-152.596h44.883c9.674 0 9.674-15 0-15h-66.439c-4.438 0-8.064 4.081-7.417 8.567v303.651c0 4.064 3.429 7.5 7.5 7.5h496.787c4.078 0 7.5-3.429 7.5-7.5v-54.359c0-9.674-15-9.674-15 0v38.872l-172.982-136.709 172.982-136.953v196.642c0 4.142 3.358 7.5 7.5 7.5zm-315.887-66.858-173.4 136.421v-273.705zm294.301 144.364h-453.539l171.329-134.791c16.679 13.205 33.034 24.635 55.402 24.635 22.59 0 39.001-11.651 55.826-24.971z"/>
+    <symbol id="website" viewBox="0 0 24 24" stroke-width="1.5"  fill="none" stroke-linecap="round" stroke-linejoin="round">
+      <title>website</title>
+      <path stroke="none" d="M0 0h24v24H0z"/>
+      <circle cx="12" cy="12" r="9" />
+      <line x1="3.6" y1="9" x2="20.4" y2="9" />
+      <line x1="3.6" y1="15" x2="20.4" y2="15" />
+      <path d="M11.5 3a17 17 0 0 0 0 18" />
+      <path d="M12.5 3a17 17 0 0 1 0 18" />
     </symbol>
+    <symbol id="phone" viewBox="0 0 24 24" stroke-width="1.5" fill="none" stroke-linecap="round" stroke-linejoin="round">
+      <title>phone</title>
+      <path stroke="none" d="M0 0h24v24H0z"/>
+      <path d="M5 4h4l2 5l-2.5 1.5a11 11 0 0 0 5 5l1.5 -2.5l5 2v4a2 2 0 0 1 -2 2a16 16 0 0 1 -15 -15a2 2 0 0 1 2 -2" />
+    </symbol>
+    <symbol id="email" viewBox="0 0 24 24" stroke-width="1.5" fill="none" stroke-linecap="round" stroke-linejoin="round">
+      <title>email</title>
+      <path stroke="none" d="M0 0h24v24H0z"/>
+      <line x1="10" y1="14" x2="21" y2="3" />
+      <path d="M21 3L14.5 21a.55 .55 0 0 1 -1 0L10 14L3 10.5a.55 .55 0 0 1 0 -1L21 3" />
+    </symbol>
+    <symbol id="facebook" viewBox="0 0 24 24" stroke-width="1.5" fill="none" stroke-linecap="round" stroke-linejoin="round">
+      <title>facebook</title>
+      <path stroke="none" d="M0 0h24v24H0z"/>
+      <path d="M7 10v4h3v7h4v-7h3l1 -4h-4v-2a1 1 0 0 1 1 -1h3v-4h-3a5 5 0 0 0 -5 5v2h-3" />
+    </symbol>
+    <symbol id="instagram" viewBox="0 0 24 24" stroke-width="1.5" fill="none" stroke-linecap="round" stroke-linejoin="round">
+      <title>instagram</title>
+      <path stroke="none" d="M0 0h24v24H0z"/>
+      <rect x="4" y="4" width="16" height="16" rx="4" />
+      <circle cx="12" cy="12" r="3" />
+      <line x1="16.5" y1="7.5" x2="16.5" y2="7.501" />
+    </symbol>
+    <symbol id="circle" viewBox="0 0 24 24" stroke-width="1.5" fill="none" stroke-linecap="round" stroke-linejoin="round">
+      <path stroke="none" d="M0 0h24v24H0z"/>
+      <circle cx="12" cy="12" r="9" />
+    </symbol>
+
   </defs>
 </svg>
