point index to actual home page

--- a/src/index.njk
+++ b/src/index.njk
@@ -1,6 +1,4 @@
 ---
-title: 'Blewett Directory'
-layout: 'layouts/coming-soon.njk'
+title: 'Blewett Community Directory'
+layout: 'layouts/home.njk'
 ---
-
-Testing testing testing
