--- a/src/_includes/partials/svg-icons.html
+++ b/src/_includes/partials/svg-icons.html
@@ -51,6 +51,12 @@
       <path stroke="none" d="M0 0h24v24H0z"/>
       <circle cx="12" cy="12" r="9" />
     </symbol>
+    <symbol id="magnifying-glass" viewBox="0 0 24 24" stroke-width="2" fill="none" stroke-linecap="round" stroke-linejoin="round">
+      <title>search</title>
+      <path stroke="none" d="M0 0h24v24H0z"/>
+      <circle cx="10" cy="10" r="7" />
+      <line x1="21" y1="21" x2="15" y2="15" />
+    </symbol>
 
   </defs>
 </svg>
