added client side home page scripts for search and filter

--- a/src/_includes/layouts/home.njk
+++ b/src/_includes/layouts/home.njk
@@ -1,6 +1,8 @@
 {% extends 'layouts/base.njk' %}
 
+{% set pageScripts = 'partials/home-scripts.html' %}
+
 {% block stuff %}
-{{content | safe}}
-  {% include 'layouts/business-card.njk' %}
+  {% include 'partials/categories.njk' %}
+  {% include 'partials/business-card.njk' %}
 {% endblock%}
