--- a/src/_includes/partials/search-form.njk
+++ b/src/_includes/partials/search-form.njk
@@ -1,4 +1,8 @@
-<form id="search-form" class="">
-  <label for="search">Search</label>
-  <input type="search" name="search" id="search">
+<form id="search-form" role="search">
+  <input type="search" name="search" id="search-input">
+  <label for="search-input">
+    <svg class="search-icon">
+      <use xlink:href="#magnifying-glass"></use>
+    </svg>
+  </label>
 </form>
