Added wave animation

--- a/src/_includes/partials/footer.html
+++ b/src/_includes/partials/footer.html
@@ -1,3 +1,4 @@
-<footer class="wrapper">
+<footer class="">
+  {% include './waves.html' %}
   <p class="web-credit">website made with love by <a href="http://agatazurek.com/">Agata Zurek</a>.</p>
 </footer>
