--- a/src/_includes/layouts/base.njk
+++ b/src/_includes/layouts/base.njk
@@ -6,6 +6,7 @@
   <title>{{ title }}</title>
   <link rel="stylesheet" href="/static/css/reset.css">
   <link rel="stylesheet" href="/static/css/style.css">
+  <link rel="stylesheet" href="/static/css/waves.css">
   <link href="https://fonts.googleapis.com/css2?family=Cabin:wght@400;500&family=Lobster&display=swap" rel="stylesheet">
   {# Add facility for pages to add styles #}
   {% if pageStyles %}
