added scroll to listings when filtering

--- a/src/_includes/partials/business-card.njk
+++ b/src/_includes/partials/business-card.njk
@@ -1,4 +1,4 @@
-<div class="auto-grid wrapper">
+<div id="listings" class="auto-grid wrapper">
   {% for listing in collections.listings %}
       <article class="card flex" data-categories="{{ listing.data.category }}">
         <svg class="business-icon">
