--- a/src/static/css/style.css
+++ b/src/static/css/style.css
@@ -48,18 +48,17 @@ body {
 	justify-content: center;
 	font-size: var(--size-base, 1rem);
 }
-header {
-	padding: 0 var(--size400, 1rem);
+header, main {
+	padding: var(--size400, 1rem);
+}
+
+main {
+	margin-top: var(--size600);
 }
 
 header > * {
 	margin-top: var(--size-base, 1rem);
-	color: var(--color-green);
 	line-height: 1;
-}
-
-main {
-	padding: var(--size-base, 1rem) 0;
 }
 
 footer {
@@ -144,7 +143,7 @@ details[open] summary {
 	width: 4rem;
 	height: 4rem;
 	flex-shrink: 0;
-	align-self: center;
+	align-self: start;
 	margin-left: auto;
 	margin-right: auto;
 }
@@ -298,6 +297,9 @@ article a:focus {
 	}
 	header {
 		line-height: 1.7;
+		padding: 0 var(--size800, 2rem);
+	}
+	main {
 		padding: 0 var(--size800, 2rem);
 	}
 	.flex.card {
