--- a/src/_includes/partials/business-card.njk
+++ b/src/_includes/partials/business-card.njk
@@ -6,49 +6,59 @@
         </svg>
         <div class="business-info">
           <h2>{{ listing.data.title }}</h2>
-          <div class="group">
-            {%- if listing.data.about %}
-            <details class="about">
-              <summary>{{ listing.data.about | truncate(140, false, ' ...') | markdownify | safe}}</summary>
-              <p>{{ listing.data.about | markdownify | safe }}</p>
-            </details>
-            {% endif %}
-          </div>
-          <div class="group">
-            {% if listing.data.website -%}
-            <a class="block" href="{{ listing.data.website }}">
-              <svg class="contact-icon">
-                <use xlink:href="#website"></use>
-              </svg>
-              {{ listing.data.website }}</a>
-            {%- endif %}
-            {% if listing.data.email -%}
-            <a class="block" href="mailto:{{ listing.data.email }}">
-              <svg class="contact-icon">
-                <use xlink:href="#email"></use>
-              </svg>
-              {{ listing.data.email }}</a>
-            {%- endif %}
-            {% if listing.data.phone -%}
-            <a class="block" href="tel:{{ listing.data.phone }}">
-              <svg class="contact-icon">
-                <use xlink:href="#phone"></use>
-              </svg>
-              {{ listing.data.phone }}</a>
-            {%- endif %}
-          </div>
-          <div class="group">
-            <p>{{ listing.data.address }}</p>
-          </div>
-          <div class="group">
-            {% for social in listing.data.social -%}
-              <a href="{{ social.url }}">
-                <svg class="icon social">
-                  <use xlink:href="#{{social.type}}"></use>
-                </svg>
-              </a>
-            {%- endfor %}
-          </div>
+          {%- if listing.data.about %}
+            <div class="group">
+                {% if listing.data.about | length > 140 %}
+                <details class="about">
+                  <summary>{{ listing.data.about | truncate(140, false, ' ...') | markdownify | safe}}</summary>
+                  {{ listing.data.about | markdownify | safe }}
+                </details>
+              {% else %}
+                {{ listing.data.about | markdownify | safe }}
+              {% endif %}
+            </div>
+          {% endif %}
+          {% if listing.data.website or listing.data.email or listing.data.phone %}
+            <div class="group">
+              {% if listing.data.website -%}
+                <a class="block" href="{{ listing.data.website }}">
+                  <svg class="contact-icon">
+                    <use xlink:href="#website"></use>
+                  </svg>
+                  {{ listing.data.website }}</a>
+              {%- endif %}
+              {% if listing.data.email -%}
+                <a class="block" href="mailto:{{ listing.data.email }}">
+                  <svg class="contact-icon">
+                    <use xlink:href="#email"></use>
+                  </svg>
+                  {{ listing.data.email }}</a>
+              {%- endif %}
+              {% if listing.data.phone -%}
+                <a class="block" href="tel:{{ listing.data.phone }}">
+                  <svg class="contact-icon">
+                    <use xlink:href="#phone"></use>
+                  </svg>
+                  {{ listing.data.phone }}</a>
+              {%- endif %}
+            </div>
+          {% endif %}
+          {% if listing.data.address %}
+            <div class="group">
+              <p>{{ listing.data.address }}</p>
+            </div>
+          {% endif %}
+          {% if listing.data.social %}
+            <div class="group">
+              {% for social in listing.data.social -%}
+                <a href="{{ social.url }}">
+                  <svg class="icon social">
+                    <use xlink:href="#{{social.type}}"></use>
+                  </svg>
+                </a>
+              {%- endfor %}
+            </div>
+          {% endif %}
         </div>
       </article>
   {% endfor %}
