--- a/src/_includes/partials/waves.html
+++ b/src/_includes/partials/waves.html
@@ -1,5 +1,5 @@
 <!-- adapted from Uwe Chardon https://codepen.io/uchardon/pen/jeaGpW -->
-<svg viewBox="0 0 120 18">
+<svg id="waves" viewBox="0 0 120 18" aria-hidden="true">
   <defs> 
     <path id="wave" d="M 0,10 C 30,10 30,15 60,15 90,15 90,10 120,10 150,10 150,15 180,15 210,15 210,10 240,10 v 16 h -240 z" />
   </defs> 
