fix accessibilty with buttons and search

--- a/src/_includes/partials/categories.njk
+++ b/src/_includes/partials/categories.njk
@@ -1,5 +1,5 @@
 {% set categoriesList = collections.listings %}
-<ul id="category-list" class="flex">
+<ul id="category-list" class="flex" aria-label="Business categories">
   <li class="selected">
     <button class="category-button">Show All</button>
   </li>
