--- a/src/static/css/reset.css
+++ b/src/static/css/reset.css
@@ -14,6 +14,7 @@ ol[class] {
 }
 
 /* Remove default margin */
+/* I added in the extras for block-start/end */
 body,
 h1,
 h2,
@@ -29,6 +30,8 @@ blockquote,
 dl,
 dd {
   margin: 0;
+  margin-block-start: 0;
+  margin-block-end: 0;
 }
 
 /* Set core body defaults */
@@ -58,7 +61,7 @@ img {
 
 /* Natural flow and rhythm in articles by default */
 article > * + * {
-  margin-top: 1em;
+  /* margin-top: 1em; */
 }
 
 /* Inherit fonts for inputs and buttons */
