added aria-hidden to svg defs

--- a/src/_includes/partials/svg-icons.html
+++ b/src/_includes/partials/svg-icons.html
@@ -1,5 +1,5 @@
 <!-- Icons by https://tablericons.com/ -->
-<svg style="position: absolute; width: 0; height: 0;" height="0"  width="0" xmlns="http://www.w3.org/2000/svg">
+<svg style="position: absolute; width: 0; height: 0;" height="0"  width="0" xmlns="http://www.w3.org/2000/svg" aria-hidden="true">
   <defs>
     <symbol id="placeholder" viewBox="0 0 512 512">
       <title>placeholder</title>
@@ -57,6 +57,5 @@
       <circle cx="10" cy="10" r="7" />
       <line x1="21" y1="21" x2="15" y2="15" />
     </symbol>
-
   </defs>
 </svg>
