--- a/src/_includes/partials/business-card.njk
+++ b/src/_includes/partials/business-card.njk
@@ -1,5 +1,5 @@
 <div id="listings" class="auto-grid wrapper">
-  {% for listing in collections.listings %}
+  {% for listing in listings %}
       <article class="card " data-categories="{{ listing.data.category }}">
         <svg class="business-icon block">
           <use xlink:href="#circle"></use>
