added number of results for scrteen readers

--- a/src/_includes/partials/search-form.njk
+++ b/src/_includes/partials/search-form.njk
@@ -1,10 +1,9 @@
 <form id="search-form" role="search">
-  
   <input type="search" name="search" id="search-input">
   <label for="search-input">
     <svg class="search-icon">
       <use xlink:href="#magnifying-glass"></use>
     </svg>
   </label>
-  
+  <p role="status" id="search-results" class="visually-hidden"></p>
 </form>
