--- a/src/_includes/partials/svg-icons.html
+++ b/src/_includes/partials/svg-icons.html
@@ -35,6 +35,14 @@
       <line x1="10" y1="14" x2="21" y2="3" />
       <path d="M21 3L14.5 21a.55 .55 0 0 1 -1 0L10 14L3 10.5a.55 .55 0 0 1 0 -1L21 3" />
     </symbol>
+    <symbol id="map-icon"viewBox="0 0 24 24" stroke-width="1.5" fill="none" stroke-linecap="round" stroke-linejoin="round">
+      <path stroke="none" d="M0 0h24v24H0z"/>
+      <line x1="18" y1="6" x2="18" y2="6.01" />
+      <path d="M18 13l-3.5 -5a4 4 0 1 1 7 0l-3.5 5" />
+      <polyline points="10.5 4.75 9 4 3 7 3 20 9 17 15 20 21 17 21 15" />
+      <line x1="9" y1="4" x2="9" y2="17" />
+      <line x1="15" y1="15" x2="15" y2="20" />
+    </symbol>
     <symbol id="facebook" viewBox="0 0 24 24" stroke-width="1.5" fill="none" stroke-linecap="round" stroke-linejoin="round">
       <title>facebook</title>
       <path stroke="none" d="M0 0h24v24H0z"/>
