--- a/src/_includes/partials/categories.njk
+++ b/src/_includes/partials/categories.njk
@@ -1,15 +1,17 @@
 {% set categoriesList = collections.listings %}
-<ul id="category-list" class="flex" aria-label="Business categories">
-  <li class="selected">
-    <a class="category-link" href="/">Show All</a>
-  </li>
-  {%- for category in collections.categoriesList %}
-  <li class="category">
-    <a {%- if category | slug in page.url %}
-     class="category-link active" aria-current="page"
-     {% else %}
-     class="category-link"
-     {% endif %} href="/category/{{ category | slug }}/">{{ category }}</a>
-  </li>
-  {%- endfor %}
-</ul>
+<nav>
+  <ul id="category-list" class="flex" aria-label="Business categories">
+    <li class="selected">
+      <a class="category-link" href="/">Show All</a>
+    </li>
+    {%- for category in collections.categoriesList %}
+    <li class="category">
+      <a {%- if category | slug in page.url %}
+      class="category-link active" aria-current="page"
+      {% else %}
+      class="category-link"
+      {% endif %} href="/category/{{ category | slug }}/">{{ category }}</a>
+    </li>
+    {%- endfor %}
+  </ul>
+</nav>
