--- a/src/_includes/partials/header.html
+++ b/src/_includes/partials/header.html
@@ -1,6 +1,6 @@
 <header class="flex">
   <h1>{{ title }}</h1>
-  <nav class="flex">
+  <nav class="flex main-nav">
     <a href="/" {%- if page.url == "/" %} class="active" aria-current="page"{% endif %}>Listings</a>
     <a href="/map" {%- if page.url == "/map/" %} class="active" aria-current="page"{% endif %}>Map</a>
   </nav>
